[gd_scene load_steps=4 format=3 uid="uid://d1n4325jx3i6g"]

[ext_resource type="Script" path="res://Scenes/Doors/door_exit.gd" id="1_t171d"]
[ext_resource type="AudioStream" uid="uid://cn2cmdyb1aq6j" path="res://Assets/Audio/purr.mp3" id="2_olx0o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_beu78"]
size = Vector2(27, 65)

[node name="DoorExit" type="Node2D"]
script = ExtResource("1_t171d")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_beu78")

[node name="AudioDoor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_olx0o")
volume_db = 24.0
max_distance = 300.0

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -51.0
offset_top = -69.0
offset_right = 57.0
offset_bottom = -43.0
text = "Press E to exit"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="finished" from="AudioDoor" to="." method="_on_audio_door_finished"]
